--- a/README.pod
+++ b/README.pod
@@ -46,7 +46,7 @@ version 0.002
     : ( $exit_code == 100 ) ? $nrpe->exit_warning('new updates available')
     : $nrpe->exit_unknown('unknown status');
 
-=head2 Creating new NRPE check
+=head2 Creating a new NRPE check
 
     perl nagios_nrpe.pl -name foo
     + file: /path/to/script/foo.pl
